<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FlappyBirdForMW</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>
    <string name="title_activity_playground">Playground</string>
    <string name="title_activity_statistics">StatisticsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tab_text_1">FLAPPY BIRD</string>
    <string name="tab_text_2">ARITHMETIC</string>
    <string name="tab_text_3">M-PUZZLE</string>
    <string name="title_activity_personal_statistics">PersonalStatisticsActivity</string>
    <string name="button_startgame">Start Game</string>
    <string name="button_scores">Scores</string>
    <string name="button_menu">Menu</string>
    <string name="button_start">Start</string>
    <string name="button_submit">Submit</string>
    <string name="invariable_text_score">Your Score:</string>
    <string name="default_question">A + B = ?</string>
    <string name="default_answer">Your answer</string>
    <string name="space"> </string>

</resources>
