<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/game_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".games.GameActivity"
    android:background="@drawable/arith_back">

    <Button
        android:id="@+id/button_game_menu"
        android:onClick="onGameMenuButtonClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/button_menu"
        style="@style/ButtonBorder.White"
        android:textColor="@drawable/text_color_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_game_start"
        android:onClick="onGameStartButtonClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="44dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="16dp"
        android:text="@string/button_start"
        style="@style/ButtonBorder.White"
        android:textColor="@drawable/text_color_btn"
        app:layout_constraintStart_toEndOf="@+id/button_game_menu"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_timer"
        android:layout_width="63dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="36dp"
        android:text=""
        android:textColor="#fff"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_game_start" />

    <EditText
        android:id="@+id/input_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/default_answer"
        android:inputType="number"
        android:textColor="#fff"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_question" />

    <TextView
        android:id="@+id/text_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginTop="88dp"
        android:text="@string/default_question"
        android:textColor="#fff"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_timer" />

    <TextView
        android:id="@+id/invariable_text_score"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="76dp"
        android:text="@string/invariable_text_score"
        android:textColor="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_answer"
        app:layout_constraintVertical_bias="0.118" />

    <TextView
        android:id="@+id/variable_text_score"
        android:layout_width="77dp"
        android:layout_height="18dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="440dp"
        android:text="@string/space"
        android:textColor="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.098"
        app:layout_constraintStart_toEndOf="@+id/invariable_text_score"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button_submit"
        style="@style/ButtonBorder.White"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:text="@string/button_submit"
        android:textColor="@drawable/text_color_btn"
        app:layout_constraintStart_toEndOf="@+id/input_answer"
        app:layout_constraintTop_toBottomOf="@+id/text_question" />

</android.support.constraint.ConstraintLayout>